# rayql

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
rayql/: Cargo.toml
rayql-engine/: Cargo.toml
rayql-engine/src/: error.rs  lib.rs  types.rs  value.rs
rayql-engine/src/schema/: error.rs  mod.rs  parser.rs  tokenizer.rs  utils.rs
rayql-engine/src/sql/: error.rs  fn_helpers.rs  function.rs  mod.rs  to_sql.rs
rayql-wasm/: Cargo.toml
rayql-wasm/src/: lib.rs
rayql/src/: lib.rs  main.rs
src/: error.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  types.rs  value.rs
src/cli/: mod.rs
src/cli/commands/: generate.rs
src/db/: mod.rs
src/parser/: mod.rs  parser.rs  tokenizer.rs  utils.rs
src/schema/: error.rs  mod.rs  parser.rs  tokenizer.rs  utils.rs
src/sql/: commands.rs  error.rs  function.rs  function_to_sql.rs  functions.rs  mod.rs  to_sql.rs
