[workspace]
members = [
    "rayql-engine",
    "rayql-wasm",
    "rayql",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0"
rayql-engine = { path = "rayql-engine" }
rayql = { path = "rayql" }
wasm-bindgen = "0.2"
