[package]
name = "rayql"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "rayql-engine",
    "rayql-wasm",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
thiserror = "1.0"
rayql-engine = { path = "rayql-engine" }
wasm-bindgen = "0.2"
annotate-snippets = "0.11.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.3", features = ["derive"] }
rayql-engine.workspace = true
